cleaned up controllers